# Swiss

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  conftest.py  pytest.ini  requirements.txt
backend/auth_app/: apps.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/backend/: models.py  settings.py  settings_test.py  urls.py
backend/clinics/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
backend/clinics/migrations/: 0001_initial.py  0002_initial.py  0003_consultation_clinic_alter_consultation_doctor_and_more.py
backend/clinics/tests/: test_create_consultation.py  test_get_consultation.py  test_get_consultations.py  test_patch_consultation.py  test_put_consultation.py  test_remove_consultation.py
backend/locale/ru/LC_MESSAGES/: django.po
backend/users/: admin.py  apps.py  models.py  permissions.py  serializers.py
backend/users/migrations/: 0001_initial.py  0002_add_groups.py  0003_alter_user_clinics_alter_user_specializations.py  0004_alter_user_first_name_alter_user_last_name_and_more.py
