[project]
name = "swiss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "commitizen>=4.8.3",
    "django>=5.2.3",
    "django-filter>=25.1",
    "django-phonenumber-field[phonenumbers]>=8.1.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.9",
    "pytest-django==4.7.0",
    "pytest-flake8>=1.3.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
]
